--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: OCram85.com
+title: CrazyML
 
 # Short description of your site
-description: "A personal blog about PowerShell, Automation and more."
+description: "Crazy Data Cloud ML Blog"
 
 # --- Navigation bar options --- #
 
