--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ footer-img: "/img/concrete-texture.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: OCram85
+  name: CrazyML
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -114,7 +114,7 @@ share-links-active:
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "250347521"
 
 # Google Tag Manager ID
 #gtm: "GTM-TKDTDKW"
