--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ share-links-active:
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics ID to track your website using GA
-google_analytics: "250347521"
+google_analytics: "G-4CPYC6Y783"
 
 # Google Tag Manager ID
 #gtm: "GTM-TKDTDKW"
